[#3545] Revert button color

--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -159,7 +159,7 @@
 
             <span id="apps-dropdown" v-if="openWithTools.length">
                 <div v-if="!isLoading" class="btn-group">
-                    <button class="btn btn-default dropdown-toggle"
+                    <button class="btn btn-primary dropdown-toggle"
                             type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Open with... <span class="caret"></span>
                     </button>
