Update community image

--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <div><a href="http://criticalzone.org"><img src="{{ STATIC_URL }}img/communities/czo-national.png"
+                    <div><a href="http://criticalzone.org"><img src="{{ STATIC_URL }}img/czo-logo-wide.png"
                                                                 alt="CZO National"></a></div>
                 </div>
                 <div class="col-sm-7">
