Add help url for community creation

--- a/hs_communities/templates/hs_communities/find-communities.html
+++ b/hs_communities/templates/hs_communities/find-communities.html
@@ -32,7 +32,7 @@
                                 aria-hidden="true">&times;</span></button>
                         <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
                         Communities are a new feature in HydroShare. For more information about creating one please
-                        contact CUAHSI
+                        contact <b><a href="mailto:help@cuahsi.org?subject=Creating New Communities">CUAHSI</a></b>
                     </div>
                 </div>
                 <div class="group-search input-group">
