Expand subject keyword input field

--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -27,7 +27,7 @@
                             </span>
                         </div>
                     {% else %}
-                        <div id="add-keyword-wrapper" class="input-group">
+                        <div id="cv-add-keyword-wrapper" class="input-group">
                             <input v-model="newKeyword" id="txt-keyword" type="text" class="form-control"
                                    @keyup.enter="addKeyword('{{ cm.short_id }}')"
                                    placeholder="Examples: Hydrologic_modeling, USU, land use">
