--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -13,15 +13,16 @@
                 <a style="text-decoration: none" href="{% url 'groups' %}"><img src="{{ STATIC_URL }}/img/groups.png"><h4>&nbsp;&nbsp;GROUPS</h4></a>
                 </div>
                 <div style="width: 500px; padding-top:1em;">
-                Groups are for research teams to share resources members of those teams. Resources can be privately
-                shared, within the group for specific audiences</div>
+                Groups are for research teams to share Private resources among members. Resources and team
+                members are often themed around a concept or event</div>
                 <div style="clear: both"></div>
                 <div style="float: left; margin-right: 2em;">
                 <a style="text-decoration: none" href="{% url 'communities' %}"><img
                         src="{{ STATIC_URL }}img/communities.png"><h4>COMMUNITIES</h4></a></div>
                 <div style="width: 600px; padding-top:1em;">
-                A Community is a collection of Groups that have something in common like being members of a large
-                research network. Communities are designed around public data sharing and open access
+                A Community is a collection of Groups that wish to share resources more seamlessly. Large
+                research networks and collaborations between Universities are good examples of Communities.
+                Communities are designed around public data sharing and open access
                 </div>
             </div>
         </div>
