Communities page layout update

--- a/hs_communities/templates/hs_communities/my-communities.html
+++ b/hs_communities/templates/hs_communities/my-communities.html
@@ -17,15 +17,10 @@
             </div>
         </div>
     </div>
-
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <h2 class="page-title">My Communities</h2>
-            </div>
-            <div class="col-sm-3">
-                <br>
-                <br>
             </div>
             <div class="col-sm-9">
                 <div class="row">
@@ -60,7 +55,7 @@
                             </table>
                         {% endif %}
                         {% if not groups and not inactive_groups %}
-                            {#                            TODO NOTE THAT NOT MEMBER OF ANY COMMUNITIES#}
+                            <i>You have not joined any communities.</i>
                         {% endif %}
                     </div>
                 </div>
