Update community description

--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -31,9 +31,9 @@
                     </td>
                     <td>
                         <div style="width: 600px; padding-top:1em;">
-                            A Community is a collection of Groups that wish to share resources more seamlessly. Large
-                            research networks and collaborations between Universities are good examples of Communities.
-                            Communities are designed around public data sharing and open access
+                            Communities are designed for Groups to share resources more seamlessly, fostering public
+                            data sharing and open access. Current examples of Communities include collaborations
+                            between large research networks and collections of universities.
                         </div>
                     </td>
                 </tr>
