Update community description

--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -13,24 +13,25 @@
                     <td>
                         <div style="float: left; margin-bottom: 3em; margin-right: 2em">
                             <a style="text-decoration: none" href="{% url 'groups' %}"><img
-                                    src="{{ STATIC_URL }}/img/groups.png"><h4>&nbsp;&nbsp;GROUPS</h4></a>
+                                    src="{{ STATIC_URL }}/img/groups.png"><h4 style="text-align: center">GROUPS</h4></a>
                         </div>
                     </td>
                     <td>
-                        <div style="width: 500px; padding-top:1em;">
-                            Groups are for research teams to share Private resources among members. Resources and team
-                            members are often themed around a concept or event
+                        <div style="width: 500px;">
+                            Groups allow research teams to share Private resources among members. These are often
+                            themed around a concept or event. Access and permissions to Resources are administered by
+                            designated individuals in each Group.
                         </div>
                     </td>
                 <tr>
                     <td>
-                        <div style="clear: both"></div>
                         <div style="float: left; margin-right: 2em;">
                             <a style="text-decoration: none" href="{% url 'communities' %}"><img
-                                    src="{{ STATIC_URL }}img/communities.png"><h4>COMMUNITIES</h4></a></div>
+                                    src="{{ STATIC_URL }}img/communities.png"><h4 style="text-align: center">
+                                COMMUNITIES</h4></a></div>
                     </td>
                     <td>
-                        <div style="width: 600px; padding-top:1em;">
+                        <div style="width: 600px;">
                             Communities are designed for Groups to share resources more seamlessly, fostering public
                             data sharing and open access. Current examples of Communities include collaborations
                             between large research networks and collections of universities.
