Update year input box size

--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -217,9 +217,9 @@
                                 <input class="title-builder-input" id="title-location" v-model="location"
                                        v-on:keyup="updateTitle()" size="51"
                                        maxlength="50" placeholder="Location" v-on:keyup="updateTitle()"/><br/>
-                                <input type="text" maxlength="4" class="title-builder-input" id="start-year"
+                                <input type="text" size="8" maxlength="4" class="title-builder-input" id="start-year"
                                        v-model="startYear" v-on:keyup="updateDate()" placeholder="Start Year"/>
-                                <input type="text" maxlength="7" class="title-builder-input" id="end-year"
+                                <input type="text" size="8" maxlength="7" class="title-builder-input" id="end-year"
                                        v-model="endYear" v-on:keyup="updateEndDate()" placeholder="End Year"/>
                                 <input type="checkbox" id="end-date-ongoing" name="end-date-ongoing" v-model="yearOngoing"
                                        true-value="Ongoing" false-value="" @change="checkOngoing()">&nbsp;Ongoing
