Update community joined message

--- a/hs_communities/templates/hs_communities/my-communities.html
+++ b/hs_communities/templates/hs_communities/my-communities.html
@@ -54,7 +54,7 @@
                                 {% endfor %}
                             </table>
                         {% endif %}
-                        {% if not groups and not inactive_groups %}
+                        {% if not communities_list %}
                             <i>You have not joined any communities.</i>
                         {% endif %}
                     </div>
