--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -190,6 +190,7 @@
                                     {% endfor %}
                                     </tbody>
                                 </table>
+                                {{ community_resources | length }} Resources
                                 {% include "includes/legend.html" %}
                             </div>
                         </div>
